parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    FLOAT
    INT
    LOWERCASE
    PARSE
    SEMICOL
    STR
    TYPEOF
    UPPERCASE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> print
Rule 5     instruccion -> println
Rule 6     instruccion -> definicion
Rule 7     instruccion -> asignacion
Rule 8     instruccion -> while
Rule 9     instruccion -> if
Rule 10    instruccion -> if_else
Rule 11    print -> PRINT LPAR exp_logica RPAR
Rule 12    println -> PRINTLN LPAR exp_logica RPAR
Rule 13    definicion -> ID
Rule 14    asignacion -> ID EQUAL exp_logica
Rule 15    while -> WHILE LPAR exp_logica RPAR LBRACE instrucciones RBRACE
Rule 16    if -> IF LPAR exp_logica RPAR LBRACE instrucciones RBRACE
Rule 17    if_else -> IF LPAR exp_logica RPAR LBRACE instrucciones RBRACE ELSE LBRACE instrucciones RBRACE
Rule 18    exp_logica -> exp_logica AND exp_logica
Rule 19    exp_logica -> exp_logica OR exp_logica
Rule 20    exp_logica -> NOT exp_logica
Rule 21    exp_logica -> exp_relacional
Rule 22    exp_relacional -> exp_relacional LESS exp_relacional
Rule 23    exp_relacional -> exp_relacional LESSEQ exp_relacional
Rule 24    exp_relacional -> exp_relacional GREATHER exp_relacional
Rule 25    exp_relacional -> exp_relacional GREATHEREQ exp_relacional
Rule 26    exp_relacional -> exp_relacional EQUALITY exp_relacional
Rule 27    exp_relacional -> exp_relacional DIFERENT exp_relacional
Rule 28    exp_relacional -> exp_aritmetica
Rule 29    exp_aritmetica -> exp_aritmetica PLUS exp_aritmetica
Rule 30    exp_aritmetica -> exp_aritmetica MINUS exp_aritmetica
Rule 31    exp_aritmetica -> exp_aritmetica TIMES exp_aritmetica
Rule 32    exp_aritmetica -> exp_aritmetica DIV exp_aritmetica
Rule 33    exp_aritmetica -> exp_aritmetica POT exp_aritmetica
Rule 34    exp_aritmetica -> MINUS exp_aritmetica
Rule 35    exp_aritmetica -> LPAR exp_logica RPAR
Rule 36    exp_aritmetica -> NUMBER
Rule 37    exp_aritmetica -> DECIMAL
Rule 38    exp_aritmetica -> CHAR
Rule 39    exp_aritmetica -> STRING
Rule 40    exp_aritmetica -> TRUE
Rule 41    exp_aritmetica -> FALSE
Rule 42    exp_aritmetica -> ID

Terminals, with rules where they appear

AND                  : 18
BOOL                 : 
CHAR                 : 38
DECIMAL              : 37
DIFERENT             : 27
DIV                  : 32
ELSE                 : 17
EQUAL                : 14
EQUALITY             : 26
FALSE                : 41
FLOAT                : 
GREATHER             : 24
GREATHEREQ           : 25
ID                   : 13 14 42
IF                   : 16 17
INT                  : 
LBRACE               : 15 16 17 17
LESS                 : 22
LESSEQ               : 23
LOWERCASE            : 
LPAR                 : 11 12 15 16 17 35
MINUS                : 30 34
NOT                  : 20
NUMBER               : 36
OR                   : 19
PARSE                : 
PLUS                 : 29
POT                  : 33
PRINT                : 11
PRINTLN              : 12
RBRACE               : 15 16 17 17
RPAR                 : 11 12 15 16 17 35
SEMICOL              : 
STR                  : 
STRING               : 39
TIMES                : 31
TRUE                 : 40
TYPEOF               : 
UPPERCASE            : 
WHILE                : 15
error                : 

Nonterminals, with rules where they appear

asignacion           : 7
definicion           : 6
exp_aritmetica       : 28 29 29 30 30 31 31 32 32 33 33 34
exp_logica           : 11 12 14 15 16 17 18 18 19 19 20 35
exp_relacional       : 21 22 22 23 23 24 24 25 25 26 26 27 27
if                   : 9
if_else              : 10
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 15 16 17 17
print                : 4
println              : 5
while                : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . print
    (5) instruccion -> . println
    (6) instruccion -> . definicion
    (7) instruccion -> . asignacion
    (8) instruccion -> . while
    (9) instruccion -> . if
    (10) instruccion -> . if_else
    (11) print -> . PRINT LPAR exp_logica RPAR
    (12) println -> . PRINTLN LPAR exp_logica RPAR
    (13) definicion -> . ID
    (14) asignacion -> . ID EQUAL exp_logica
    (15) while -> . WHILE LPAR exp_logica RPAR LBRACE instrucciones RBRACE
    (16) if -> . IF LPAR exp_logica RPAR LBRACE instrucciones RBRACE
    (17) if_else -> . IF LPAR exp_logica RPAR LBRACE instrucciones RBRACE ELSE LBRACE instrucciones RBRACE

    PRINT           shift and go to state 11
    PRINTLN         shift and go to state 12
    ID              shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    print                          shift and go to state 4
    println                        shift and go to state 5
    definicion                     shift and go to state 6
    asignacion                     shift and go to state 7
    while                          shift and go to state 8
    if                             shift and go to state 9
    if_else                        shift and go to state 10

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . print
    (5) instruccion -> . println
    (6) instruccion -> . definicion
    (7) instruccion -> . asignacion
    (8) instruccion -> . while
    (9) instruccion -> . if
    (10) instruccion -> . if_else
    (11) print -> . PRINT LPAR exp_logica RPAR
    (12) println -> . PRINTLN LPAR exp_logica RPAR
    (13) definicion -> . ID
    (14) asignacion -> . ID EQUAL exp_logica
    (15) while -> . WHILE LPAR exp_logica RPAR LBRACE instrucciones RBRACE
    (16) if -> . IF LPAR exp_logica RPAR LBRACE instrucciones RBRACE
    (17) if_else -> . IF LPAR exp_logica RPAR LBRACE instrucciones RBRACE ELSE LBRACE instrucciones RBRACE

    $end            reduce using rule 1 (init -> instrucciones .)
    PRINT           shift and go to state 11
    PRINTLN         shift and go to state 12
    ID              shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15

    instruccion                    shift and go to state 16
    print                          shift and go to state 4
    println                        shift and go to state 5
    definicion                     shift and go to state 6
    asignacion                     shift and go to state 7
    while                          shift and go to state 8
    if                             shift and go to state 9
    if_else                        shift and go to state 10

state 3

    (3) instrucciones -> instruccion .

    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    RBRACE          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> print .

    PRINT           reduce using rule 4 (instruccion -> print .)
    PRINTLN         reduce using rule 4 (instruccion -> print .)
    ID              reduce using rule 4 (instruccion -> print .)
    WHILE           reduce using rule 4 (instruccion -> print .)
    IF              reduce using rule 4 (instruccion -> print .)
    $end            reduce using rule 4 (instruccion -> print .)
    RBRACE          reduce using rule 4 (instruccion -> print .)


state 5

    (5) instruccion -> println .

    PRINT           reduce using rule 5 (instruccion -> println .)
    PRINTLN         reduce using rule 5 (instruccion -> println .)
    ID              reduce using rule 5 (instruccion -> println .)
    WHILE           reduce using rule 5 (instruccion -> println .)
    IF              reduce using rule 5 (instruccion -> println .)
    $end            reduce using rule 5 (instruccion -> println .)
    RBRACE          reduce using rule 5 (instruccion -> println .)


state 6

    (6) instruccion -> definicion .

    PRINT           reduce using rule 6 (instruccion -> definicion .)
    PRINTLN         reduce using rule 6 (instruccion -> definicion .)
    ID              reduce using rule 6 (instruccion -> definicion .)
    WHILE           reduce using rule 6 (instruccion -> definicion .)
    IF              reduce using rule 6 (instruccion -> definicion .)
    $end            reduce using rule 6 (instruccion -> definicion .)
    RBRACE          reduce using rule 6 (instruccion -> definicion .)


state 7

    (7) instruccion -> asignacion .

    PRINT           reduce using rule 7 (instruccion -> asignacion .)
    PRINTLN         reduce using rule 7 (instruccion -> asignacion .)
    ID              reduce using rule 7 (instruccion -> asignacion .)
    WHILE           reduce using rule 7 (instruccion -> asignacion .)
    IF              reduce using rule 7 (instruccion -> asignacion .)
    $end            reduce using rule 7 (instruccion -> asignacion .)
    RBRACE          reduce using rule 7 (instruccion -> asignacion .)


state 8

    (8) instruccion -> while .

    PRINT           reduce using rule 8 (instruccion -> while .)
    PRINTLN         reduce using rule 8 (instruccion -> while .)
    ID              reduce using rule 8 (instruccion -> while .)
    WHILE           reduce using rule 8 (instruccion -> while .)
    IF              reduce using rule 8 (instruccion -> while .)
    $end            reduce using rule 8 (instruccion -> while .)
    RBRACE          reduce using rule 8 (instruccion -> while .)


state 9

    (9) instruccion -> if .

    PRINT           reduce using rule 9 (instruccion -> if .)
    PRINTLN         reduce using rule 9 (instruccion -> if .)
    ID              reduce using rule 9 (instruccion -> if .)
    WHILE           reduce using rule 9 (instruccion -> if .)
    IF              reduce using rule 9 (instruccion -> if .)
    $end            reduce using rule 9 (instruccion -> if .)
    RBRACE          reduce using rule 9 (instruccion -> if .)


state 10

    (10) instruccion -> if_else .

    PRINT           reduce using rule 10 (instruccion -> if_else .)
    PRINTLN         reduce using rule 10 (instruccion -> if_else .)
    ID              reduce using rule 10 (instruccion -> if_else .)
    WHILE           reduce using rule 10 (instruccion -> if_else .)
    IF              reduce using rule 10 (instruccion -> if_else .)
    $end            reduce using rule 10 (instruccion -> if_else .)
    RBRACE          reduce using rule 10 (instruccion -> if_else .)


state 11

    (11) print -> PRINT . LPAR exp_logica RPAR

    LPAR            shift and go to state 17


state 12

    (12) println -> PRINTLN . LPAR exp_logica RPAR

    LPAR            shift and go to state 18


state 13

    (13) definicion -> ID .
    (14) asignacion -> ID . EQUAL exp_logica

    PRINT           reduce using rule 13 (definicion -> ID .)
    PRINTLN         reduce using rule 13 (definicion -> ID .)
    ID              reduce using rule 13 (definicion -> ID .)
    WHILE           reduce using rule 13 (definicion -> ID .)
    IF              reduce using rule 13 (definicion -> ID .)
    $end            reduce using rule 13 (definicion -> ID .)
    RBRACE          reduce using rule 13 (definicion -> ID .)
    EQUAL           shift and go to state 19


state 14

    (15) while -> WHILE . LPAR exp_logica RPAR LBRACE instrucciones RBRACE

    LPAR            shift and go to state 20


state 15

    (16) if -> IF . LPAR exp_logica RPAR LBRACE instrucciones RBRACE
    (17) if_else -> IF . LPAR exp_logica RPAR LBRACE instrucciones RBRACE ELSE LBRACE instrucciones RBRACE

    LPAR            shift and go to state 21


state 16

    (2) instrucciones -> instrucciones instruccion .

    PRINT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    PRINTLN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    WHILE           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RBRACE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 17

    (11) print -> PRINT LPAR . exp_logica RPAR
    (18) exp_logica -> . exp_logica AND exp_logica
    (19) exp_logica -> . exp_logica OR exp_logica
    (20) exp_logica -> . NOT exp_logica
    (21) exp_logica -> . exp_relacional
    (22) exp_relacional -> . exp_relacional LESS exp_relacional
    (23) exp_relacional -> . exp_relacional LESSEQ exp_relacional
    (24) exp_relacional -> . exp_relacional GREATHER exp_relacional
    (25) exp_relacional -> . exp_relacional GREATHEREQ exp_relacional
    (26) exp_relacional -> . exp_relacional EQUALITY exp_relacional
    (27) exp_relacional -> . exp_relacional DIFERENT exp_relacional
    (28) exp_relacional -> . exp_aritmetica
    (29) exp_aritmetica -> . exp_aritmetica PLUS exp_aritmetica
    (30) exp_aritmetica -> . exp_aritmetica MINUS exp_aritmetica
    (31) exp_aritmetica -> . exp_aritmetica TIMES exp_aritmetica
    (32) exp_aritmetica -> . exp_aritmetica DIV exp_aritmetica
    (33) exp_aritmetica -> . exp_aritmetica POT exp_aritmetica
    (34) exp_aritmetica -> . MINUS exp_aritmetica
    (35) exp_aritmetica -> . LPAR exp_logica RPAR
    (36) exp_aritmetica -> . NUMBER
    (37) exp_aritmetica -> . DECIMAL
    (38) exp_aritmetica -> . CHAR
    (39) exp_aritmetica -> . STRING
    (40) exp_aritmetica -> . TRUE
    (41) exp_aritmetica -> . FALSE
    (42) exp_aritmetica -> . ID

    NOT             shift and go to state 24
    MINUS           shift and go to state 27
    LPAR            shift and go to state 22
    NUMBER          shift and go to state 28
    DECIMAL         shift and go to state 29
    CHAR            shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    ID              shift and go to state 34

    exp_logica                     shift and go to state 23
    exp_relacional                 shift and go to state 25
    exp_aritmetica                 shift and go to state 26

state 18

    (12) println -> PRINTLN LPAR . exp_logica RPAR
    (18) exp_logica -> . exp_logica AND exp_logica
    (19) exp_logica -> . exp_logica OR exp_logica
    (20) exp_logica -> . NOT exp_logica
    (21) exp_logica -> . exp_relacional
    (22) exp_relacional -> . exp_relacional LESS exp_relacional
    (23) exp_relacional -> . exp_relacional LESSEQ exp_relacional
    (24) exp_relacional -> . exp_relacional GREATHER exp_relacional
    (25) exp_relacional -> . exp_relacional GREATHEREQ exp_relacional
    (26) exp_relacional -> . exp_relacional EQUALITY exp_relacional
    (27) exp_relacional -> . exp_relacional DIFERENT exp_relacional
    (28) exp_relacional -> . exp_aritmetica
    (29) exp_aritmetica -> . exp_aritmetica PLUS exp_aritmetica
    (30) exp_aritmetica -> . exp_aritmetica MINUS exp_aritmetica
    (31) exp_aritmetica -> . exp_aritmetica TIMES exp_aritmetica
    (32) exp_aritmetica -> . exp_aritmetica DIV exp_aritmetica
    (33) exp_aritmetica -> . exp_aritmetica POT exp_aritmetica
    (34) exp_aritmetica -> . MINUS exp_aritmetica
    (35) exp_aritmetica -> . LPAR exp_logica RPAR
    (36) exp_aritmetica -> . NUMBER
    (37) exp_aritmetica -> . DECIMAL
    (38) exp_aritmetica -> . CHAR
    (39) exp_aritmetica -> . STRING
    (40) exp_aritmetica -> . TRUE
    (41) exp_aritmetica -> . FALSE
    (42) exp_aritmetica -> . ID

    NOT             shift and go to state 24
    MINUS           shift and go to state 27
    LPAR            shift and go to state 22
    NUMBER          shift and go to state 28
    DECIMAL         shift and go to state 29
    CHAR            shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    ID              shift and go to state 34

    exp_logica                     shift and go to state 35
    exp_relacional                 shift and go to state 25
    exp_aritmetica                 shift and go to state 26

state 19

    (14) asignacion -> ID EQUAL . exp_logica
    (18) exp_logica -> . exp_logica AND exp_logica
    (19) exp_logica -> . exp_logica OR exp_logica
    (20) exp_logica -> . NOT exp_logica
    (21) exp_logica -> . exp_relacional
    (22) exp_relacional -> . exp_relacional LESS exp_relacional
    (23) exp_relacional -> . exp_relacional LESSEQ exp_relacional
    (24) exp_relacional -> . exp_relacional GREATHER exp_relacional
    (25) exp_relacional -> . exp_relacional GREATHEREQ exp_relacional
    (26) exp_relacional -> . exp_relacional EQUALITY exp_relacional
    (27) exp_relacional -> . exp_relacional DIFERENT exp_relacional
    (28) exp_relacional -> . exp_aritmetica
    (29) exp_aritmetica -> . exp_aritmetica PLUS exp_aritmetica
    (30) exp_aritmetica -> . exp_aritmetica MINUS exp_aritmetica
    (31) exp_aritmetica -> . exp_aritmetica TIMES exp_aritmetica
    (32) exp_aritmetica -> . exp_aritmetica DIV exp_aritmetica
    (33) exp_aritmetica -> . exp_aritmetica POT exp_aritmetica
    (34) exp_aritmetica -> . MINUS exp_aritmetica
    (35) exp_aritmetica -> . LPAR exp_logica RPAR
    (36) exp_aritmetica -> . NUMBER
    (37) exp_aritmetica -> . DECIMAL
    (38) exp_aritmetica -> . CHAR
    (39) exp_aritmetica -> . STRING
    (40) exp_aritmetica -> . TRUE
    (41) exp_aritmetica -> . FALSE
    (42) exp_aritmetica -> . ID

    NOT             shift and go to state 24
    MINUS           shift and go to state 27
    LPAR            shift and go to state 22
    NUMBER          shift and go to state 28
    DECIMAL         shift and go to state 29
    CHAR            shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    ID              shift and go to state 34

    exp_logica                     shift and go to state 36
    exp_relacional                 shift and go to state 25
    exp_aritmetica                 shift and go to state 26

state 20

    (15) while -> WHILE LPAR . exp_logica RPAR LBRACE instrucciones RBRACE
    (18) exp_logica -> . exp_logica AND exp_logica
    (19) exp_logica -> . exp_logica OR exp_logica
    (20) exp_logica -> . NOT exp_logica
    (21) exp_logica -> . exp_relacional
    (22) exp_relacional -> . exp_relacional LESS exp_relacional
    (23) exp_relacional -> . exp_relacional LESSEQ exp_relacional
    (24) exp_relacional -> . exp_relacional GREATHER exp_relacional
    (25) exp_relacional -> . exp_relacional GREATHEREQ exp_relacional
    (26) exp_relacional -> . exp_relacional EQUALITY exp_relacional
    (27) exp_relacional -> . exp_relacional DIFERENT exp_relacional
    (28) exp_relacional -> . exp_aritmetica
    (29) exp_aritmetica -> . exp_aritmetica PLUS exp_aritmetica
    (30) exp_aritmetica -> . exp_aritmetica MINUS exp_aritmetica
    (31) exp_aritmetica -> . exp_aritmetica TIMES exp_aritmetica
    (32) exp_aritmetica -> . exp_aritmetica DIV exp_aritmetica
    (33) exp_aritmetica -> . exp_aritmetica POT exp_aritmetica
    (34) exp_aritmetica -> . MINUS exp_aritmetica
    (35) exp_aritmetica -> . LPAR exp_logica RPAR
    (36) exp_aritmetica -> . NUMBER
    (37) exp_aritmetica -> . DECIMAL
    (38) exp_aritmetica -> . CHAR
    (39) exp_aritmetica -> . STRING
    (40) exp_aritmetica -> . TRUE
    (41) exp_aritmetica -> . FALSE
    (42) exp_aritmetica -> . ID

    NOT             shift and go to state 24
    MINUS           shift and go to state 27
    LPAR            shift and go to state 22
    NUMBER          shift and go to state 28
    DECIMAL         shift and go to state 29
    CHAR            shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    ID              shift and go to state 34

    exp_logica                     shift and go to state 37
    exp_relacional                 shift and go to state 25
    exp_aritmetica                 shift and go to state 26

state 21

    (16) if -> IF LPAR . exp_logica RPAR LBRACE instrucciones RBRACE
    (17) if_else -> IF LPAR . exp_logica RPAR LBRACE instrucciones RBRACE ELSE LBRACE instrucciones RBRACE
    (18) exp_logica -> . exp_logica AND exp_logica
    (19) exp_logica -> . exp_logica OR exp_logica
    (20) exp_logica -> . NOT exp_logica
    (21) exp_logica -> . exp_relacional
    (22) exp_relacional -> . exp_relacional LESS exp_relacional
    (23) exp_relacional -> . exp_relacional LESSEQ exp_relacional
    (24) exp_relacional -> . exp_relacional GREATHER exp_relacional
    (25) exp_relacional -> . exp_relacional GREATHEREQ exp_relacional
    (26) exp_relacional -> . exp_relacional EQUALITY exp_relacional
    (27) exp_relacional -> . exp_relacional DIFERENT exp_relacional
    (28) exp_relacional -> . exp_aritmetica
    (29) exp_aritmetica -> . exp_aritmetica PLUS exp_aritmetica
    (30) exp_aritmetica -> . exp_aritmetica MINUS exp_aritmetica
    (31) exp_aritmetica -> . exp_aritmetica TIMES exp_aritmetica
    (32) exp_aritmetica -> . exp_aritmetica DIV exp_aritmetica
    (33) exp_aritmetica -> . exp_aritmetica POT exp_aritmetica
    (34) exp_aritmetica -> . MINUS exp_aritmetica
    (35) exp_aritmetica -> . LPAR exp_logica RPAR
    (36) exp_aritmetica -> . NUMBER
    (37) exp_aritmetica -> . DECIMAL
    (38) exp_aritmetica -> . CHAR
    (39) exp_aritmetica -> . STRING
    (40) exp_aritmetica -> . TRUE
    (41) exp_aritmetica -> . FALSE
    (42) exp_aritmetica -> . ID

    NOT             shift and go to state 24
    MINUS           shift and go to state 27
    LPAR            shift and go to state 22
    NUMBER          shift and go to state 28
    DECIMAL         shift and go to state 29
    CHAR            shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    ID              shift and go to state 34

    exp_logica                     shift and go to state 38
    exp_relacional                 shift and go to state 25
    exp_aritmetica                 shift and go to state 26

state 22
